UI done. need to implement nodemailer.

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -3,10 +3,14 @@
 .About {
   &-Container {
     color: mixins.$white;
+    min-height: calc(100vh - 55px);
+
+    @include mixins.for-phone-only {
+      scroll-margin-top: 65px;
+    }
   }
 
   &-Content {
-    margin-top: 32px;
     display: flex;
     align-items: center;
     justify-content: space-around;
