--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -2,12 +2,12 @@
 
 .Nav {
   &-Container {
+    z-index: 1000;
     color: mixins.$white;
     background-color: mixins.$prussian-blue;
     padding: 10px 15px;
     position: sticky;
     top: 0;
-    width: 100%;
   }
 
   &-Breadcrumbs {
