--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -2,40 +2,79 @@
 
 .About {
   &-Container {
+    background-color: mixins.$bice-blue;
     color: mixins.$white;
     min-height: calc(100vh - 55px);
-
-    @include mixins.for-phone-only {
-      scroll-margin-top: 65px;
-    }
+    padding: 10px 0px;
+    scroll-margin-top: 65px;
+    margin: 0;
   }
 
   &-Content {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin-top: 30px;
 
-    @include mixins.for-phone-only {
-      flex-direction: column;
+    @include mixins.for-desktop-up {
+      flex-direction: row;
     }
+  }
+
+  &-Title {
+    position: relative;
+    padding-bottom: 10px;
+  }
+
+  &-Title::before {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: mixins.$prussian-blue;
+    transform: translateX(-50%);
+  }
+
+  &-Title::after {
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    font-size: 20px;
+    color: mixins.$columbia-blue;
+    padding: 0 5px;
+    background: mixins.$bice-blue;
+    transform: translateX(-50%);
+    content: "who I am";
+    font-weight: 500;
   }
 
   &-Text {
-    display: block;
-    width: 45%;
-
-    @include mixins.for-phone-only {
-      width: 100%;
+    height: 100%;
+    @include mixins.for-desktop-up {
+      width: 55%;
     }
   }
-  &-Img {
-    width: 45%;
 
-    object-fit: contain;
-    border-radius: 10%;
+  &-Img {
+    width: 350px;
+    height: 350px;
+
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 32px;
+    @include mixins.for-desktop-up {
+      width: 450px;
+      height: 450px;
+      margin-right: 15px;
+      margin-bottom: 0px;
+    }
+
     @include mixins.for-phone-only {
-      width: 90%;
-      margin-bottom: 32px;
+      width: 300px;
+      height: 300px;
     }
   }
 
@@ -60,4 +99,8 @@
 
 .Variant {
   flex-direction: column;
+}
+
+.About-Copy.MuiTypography-root {
+  margin-bottom: 40px;
 }
