--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -53,7 +53,10 @@
 
   &-Text {
     height: 100%;
+    display: flex;
+    flex-direction: column;
     @include mixins.for-desktop-up {
+      align-items: center;
       width: 55%;
     }
   }
@@ -66,8 +69,8 @@
     border-radius: 10px;
     margin-bottom: 32px;
     @include mixins.for-desktop-up {
-      width: 450px;
-      height: 450px;
+      width: 400px;
+      height: 400px;
       margin-right: 15px;
       margin-bottom: 0px;
     }
@@ -76,6 +79,11 @@
       width: 300px;
       height: 300px;
     }
+  }
+
+  &-Btn:hover {
+    background-color: mixins.$prussian-blue;
+    border-color: mixins.$prussian-blue;
   }
 
   &-Icon {
@@ -87,7 +95,7 @@
   }
 
   &-Stack {
-    margin: 20px 0px;
+    margin: 25px 0px;
     display: grid;
     grid-template-columns: repeat(4, max-content);
     width: 100%;
